--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 19 14:20:45 CEST 2024
-sdk.dir=C\:\\Users\\ALEX\\AppData\\Local\\Android\\Sdk
+#Mon Apr 22 14:48:18 CEST 2024
+sdk.dir=C\:\\Users\\niccolo.bertozzi2\\AppData\\Local\\Android\\Sdk
